# livesports-bot

./: .gitignore  Cargo.toml  README.md  STRATEGY_AUDIT.md
.github/workflows/: release.yml
src/: config.rs  main.rs
src/bot/: calibration.rs  kelly.rs  mod.rs  position.rs  strategy.rs  win_probability.rs
src/dashboard/: mod.rs
src/db/: mod.rs  models.rs
src/live_scores/: mod.rs  provider.rs  sports.rs  websocket.rs
src/polymarket/: client.rs  market_cache.rs  mod.rs  price_ws.rs
