[package]
name = "livesports-bot"
version = "0.3.0"
edition = "2021"
description = "Polymarket sports betting bot with live score monitoring and web dashboard"

[[bin]]
name = "livesports-bot"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# WebSockets
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }

# Web framework for dashboard
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }

# SQLite
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI arguments
clap = { version = "4", features = ["derive", "env"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Async traits
async-trait = "0.1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# URL
url = "2"

# Futures utilities
futures-util = "0.3"

# Random (for jitter)
rand = "0.8"

[dev-dependencies]
approx = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
